--- a/.github/workflows/gnu.yaml
+++ b/.github/workflows/gnu.yaml
@@ -11,19 +11,17 @@ jobs:
   awk:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+        build: 
+          - host: macos-latest
+          - host: ubuntu-latest
+          - host: ubuntu-latest
+            target: "@toolchains_windows//:windows_x86_64"
+            apt: sudo apt-get install mingw-w64
+    runs-on: ${{ matrix.build.host }}
     defaults:
       run:
         working-directory: gnu/awk
     steps:
-      - uses: msys2/setup-msys2@v2
-        if: matrix.os == 'windows-latest'
-        with:
-          # GAWK only builds on mingw64.
-          msystem: mingw64
-          install: >-
-            mingw-w64-x86_64-toolchain
       - uses: actions/checkout@v2
       - uses: bazel-contrib/setup-bazel@0.9.1
         with:
@@ -33,6 +31,10 @@ jobs:
           disk-cache: ${{ github.workflow }}
           # Share repository cache between workflows.
           repository-cache: true
+      - run: echo "common --platforms=${{matrix.build.target}}" >> .bazelrc
+        if: matrix.build.target
+      - run: ${{matrix.build.apt}}
+        if: matrix.build.apt
       - run: bazel build @gawk//:gawk
       - run: bazel run @gawk//:gawk -- '{ print $2 }' <<< "hello there :)"
 
