--- a/gnu/awk/MODULE.bazel
+++ b/gnu/awk/MODULE.bazel
@@ -8,10 +8,15 @@ bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "rules_cc", version = "0.0.9")
 bazel_dep(name = "platforms", version = "0.0.8")
 bazel_dep(name = "toolchains_musl", version = "0.1.20")
+bazel_dep(name = "toolchains_windows", version = "0.0.0")
+
+local_path_override(
+    module_name = "toolchains_windows",
+    path = "../../toolchains/windows",
+)
 
 toolchains_musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl")
 use_repo(toolchains_musl, "musl_toolchains_hub")
-
 register_toolchains("@musl_toolchains_hub//:all")
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
